--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -19,6 +19,7 @@ platforms:
     image: 'ansible0guy/molecule:debian-latest'
     tmpfs: ['/tmp', '/run', '/run/lock']
     privileged: true
+    command: '/sbin/init'
 
   - name: test-ag-semaphore-1
     networks:
@@ -29,6 +30,7 @@ platforms:
     image: 'ansible0guy/molecule:debian-latest'
     tmpfs: ['/tmp', '/run', '/run/lock']
     privileged: true
+    command: '/sbin/init'
 
 provisioner:
   name: ansible
