--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -43,10 +43,10 @@
 - name: Semaphore | Checking Database config if unmanaged
   ansible.builtin.assert:
     that:
-      - SEM_CONFIG.config[sem_db]host | default(none, true) is not none
-      - SEM_CONFIG.config[sem_db]user | default(none, true) is not none
-      - SEM_CONFIG.config[sem_db]pass | default(none, true) is not none
-      - SEM_CONFIG.config[sem_db]name | default(none, true) is not none
+      - SEM_CONFIG.config[sem_db].host | default(none, true) is not none
+      - SEM_CONFIG.config[sem_db].user | default(none, true) is not none
+      - SEM_CONFIG.config[sem_db].pass | default(none, true) is not none
+      - SEM_CONFIG.config[sem_db].name | default(none, true) is not none
   vars:
     sem_db: "{{ SEM_CONFIG.config.dialect }}"
   when: not SEM_CONFIG.manage.database | bool
