--- a/defaults/main/0_hardcoded.yml
+++ b/defaults/main/0_hardcoded.yml
@@ -7,6 +7,7 @@ SEM_HC:
   bin: '/usr/local/bin/semaphore'
   config: '/etc/semaphore/config.json'
   dl_tmpl: "https://github.com/ansible-semaphore/semaphore/releases/download/v%s/semaphore_%s_linux_%s.tar.gz"
+  dl_base_url: "https://github.com/ansible-semaphore/semaphore/releases/download"
   user: 'semaphore'
   home: '/home/semaphore'
   ansible_cfg: '/home/semaphore/.ansible.cfg'
