--- a/tasks/debian/install.yml
+++ b/tasks/debian/install.yml
@@ -57,7 +57,7 @@
 
     - name: Semaphore | Install | Downloading
       ansible.builtin.unarchive:
-        src: "{{ SEM_HC.DL_URL }}"
+        src: "{{ DL_URL }}"
         dest: "{{ sem_dl_dir.path }}"
         remote_src: true
 
